[package]
name = "tnt"
version = "0.1.0"
edition = "2021"
authors = ["João Vitor Silveira Ribeiro <joaovitorsrs7@gmail.com>"]
description = "A terminal-based note taking app"
documentation = "https://github.com/joao-vitor-sr/tnt"
homepage = "https://github.com/joao-vitor-sr/tnt"
repository = "https://github.com/joao-vitor-sr/tnt"
license = "MIT"
keywords = ["note", "file", "xdg"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
lexopt = "0.2.1"

[[bin]]
name = "tnt"

